--- a/_posts/2014-02-01-marathon.markdown
+++ b/_posts/2014-02-01-marathon.markdown
@@ -4,23 +4,23 @@ title: Jumping off a cliff
 category: posts
 ---
 I was on vacation visiting my brother's in Texas. After a heavy meal and 
-slowly drifting into an incredible food coma, i picked up a book lying next to bed on a shelf called <a href = "http://www.amazon.com/Four-Months-Four-hour-Marathon-Updated/dp/0399532595">4 hour marathon</a>.
-I was curious because i felt that the entire idea of running a marathon seemed mental, let alone a 4 hour one.
-It was a tiny book and i finished it in one sitting.I put the book back on the shelf and forgot all about it, but little
-did i know that the <a href ="http://www.youtube.com/watch?v=imamcajBEJs">seed</a> was planted.
+slowly drifting into an incredible food coma, I picked up a book lying next to bed on a shelf called <a href = "http://www.amazon.com/Four-Months-Four-hour-Marathon-Updated/dp/0399532595">4 hour marathon</a>.
+I was curious because I felt that the entire idea of running a marathon seemed mental, let alone a 4 hour one.
+It was a tiny book and I finished it in one sitting. I put the book back on the shelf and forgot all about it, but little
+did I know that the <a href ="http://www.youtube.com/watch?v=imamcajBEJs">seed</a> was planted.
 
-I hated running. i didn't think of running a marathon as humanly possible, unless you had a certain type of body and especially not, if you weighed above 200 pounds. 
-Before then, the farthest i had ever run in my life was 3 miles and i could count the number of times
-i did that on my fingers.I'd rather watch <a href="http://www.youtube.com/watch?v=kfVsfOSbJY0&feature=kp">this</a>, 30 times in a row than run 3 miles.
+I hated running. I didn't think of running a marathon as humanly possible, unless you had a certain type of body and especially not, if you weighed above 200 pounds. 
+Before then, the farthest i had ever run in my life was 3 miles and I could count the number of times
+I did that on my fingers. I'd rather watch <a href="http://www.youtube.com/watch?v=kfVsfOSbJY0&feature=kp">this</a>, 30 times in a row than run 3 miles.
 
-A couple of months after reading the book, my girlfriend at the time( now fiancee) , brought up the topic of running a marathon.She said that it was , physically, one of the hardest things she had ever done.
-When a girl you like and have been dating for 3 months says such a thing, of course you act irrationally and tell her that its a great idea!
-We signed up for the marathon with exactly 4 months to go. I can't tell you how many times i
-regretted that decision i made that day during our training sessions, but its all worth it when you go across that finish line and have just done something you thought was completely 
+A couple of months after reading the book, my girlfriend at the time (now fiancee), brought up the topic of running a marathon. She said that it was, physically, one of the hardest things she had ever done.
+When a girl you like and have been dating for 3 months says such a thing, of course you act irrationally and tell her that it's a great idea!
+We signed up for the marathon with exactly 4 months to go. I can't tell you how many times I
+regretted that decision I made that day during our training sessions, but it's all worth it when you go across that finish line and have just done something you thought was completely 
 impossible just 4 months ago. 
 
-Knowing your limits is great, but i think most often you just need to jump off the cliff and build your parachute on your way down.
-Yes, its not going to be pretty all the time, but the marginal value of every success is so high to  the marginal loss of failure for outlandish goals.
+It's great to know your limits, but I think most often you just need to jump off the cliff and build your parachute on your way down.
+Yes, it's not going to be pretty all the time, but the marginal value of every success is so high to  the marginal loss of failure for outlandish goals.
 Now go sign up for that marathon and when you finish - scream, curse and cry.
 
 ---
