--- a/_posts/2014-03-13-ny.markdown
+++ b/_posts/2014-03-13-ny.markdown
@@ -3,7 +3,7 @@ layout: post
 title: Dear New York 
 category: posts
 ---
-There are many things i hate about New York but there are about twice the number of the things that i love about it as well. Here are a collections of things i tell people (until now, only the near and dear ones) to do, eat and drink. These places are not overly popular that you would find them in any travel book (Okay, there might be one or two) but for the most part, these are places i have deep connections with and go back from time to time. I am not going to include any links to their sites, because i assume you can use the interwebs for it. 
+There are many things i hate about New York but there are about twice the number of the things that i love about it. Here are a collections of things i tell people (until now, only the near and dear ones) to do, eat and drink. These places are not overly popular that you would find them in any travel book (Okay, there might be one or two) but for the most part, these are places i have deep connections with and go back from time to time. I am not going to include any links to their sites, because i assume you can use the interwebs for it. 
 I know that i might be doing myself a disservice by blogging about these favourites and increasing my wait time the next time i go here, BUT i also believe that if you have a good thing to offer to the world, the world should be back nice to you.
 
 So here they are, my biggest hits :
@@ -28,7 +28,7 @@ Liquiteria - Oatmeal <br>
 Shake Shack burger<br>
 Beyond Sushi - Best vegetarian sushi, ever.<br>
 Pio pio - Peruvian Chicken<br>
-Five Leaves - Australian(in Williamsburg, Brooklyn)<br>
+Five Leaves - Australian (in Williamsburg, Brooklyn)<br>
 Angelicas Kitchen - Vegetarian<br>
 Candle Cafe - Vegetarian<br>
 Halal guys @ 53rd and 6th<br>
@@ -58,7 +58,7 @@ Momofuku milk bar<br>
 
 I've done my fare bit of travelling and i hate to say it, but New York is the world's most amazing city and the places listed above are just a few reasons for it. There, i said it and i won't take it back.
 
-One of the places that i have deep connection with is not on this list because I went back and deleted it. I’m only human. Not to worry, I will give them all the business they need. 
+One of the places that i have a deep connection with is not on this list because I went back and deleted it. I’m only human. Not to worry, I will give them all the business they need. 
 
 
 ---
