New York Post edits

--- a/_posts/2014-03-13-ny.markdown
+++ b/_posts/2014-03-13-ny.markdown
@@ -38,7 +38,7 @@ Spice Market<br>
 
 
 <h2>Drink</h2>
-Amori Amargo - Bitters bar<br>
+Amor y Amargo - A Bitters Tasting Room<br>
 Alice’s tea cup<br>
 Chaan tea house<br>
 Blue Bottle Coffee - Rockefeller building<br>
