--- a/_posts/2014-03-13-ny.markdown
+++ b/_posts/2014-03-13-ny.markdown
@@ -3,63 +3,60 @@ layout: post
 title: Dear New York 
 category: posts
 ---
-There are many things i hate about New York but there are about twice the number of the things that i love about it. Here are a collections of things i tell people (until now, only the near and dear ones) to do, eat and drink. These places are not overly popular that you would find them in any travel book (Okay, there might be one or two) but for the most part, these are places i have deep connections with and go back from time to time. I am not going to include any links to their sites, because i assume you can use the interwebs for it. 
-I know that i might be doing myself a disservice by blogging about these favourites and increasing my wait time the next time i go here, BUT i also believe that if you have a good thing to offer to the world, the world should be back nice to you.
+There are many things I hate about New York but there are about twice the number of the things that I love about it. Here are a collections of things I tell people (until now, only the near and dear ones) to do, eat and drink. These places are not overly popular that you would find them in any travel book (Okay, there might be one or two) but for the most part, these are places I have deep connections with and go back from time to time. I am not going to include any links to their sites, because I assume you can use the interwebs for it. 
+I know that I might be doing myself a disservice by blogging about these favorites and increasing my wait time the next time I go here, BUT I also believe that if you have a good thing to offer to the world, the world should be back nice to you.
 
-So here they are, my biggest hits :
+So here they are, my biggest hits:
  
 <h2>Do</h2>
 
 
-Central Park - Run the bridal path<br>
-Walk the Highline<br>
-Museum of Modern Art<br>
-The MET - Although this is a donation based museum, the ladies at the ticket counter don't tell you that!<br>
-Williamsburg, Brooklyn - Bedford Ave<br>
-Walk the Brooklyn Bridge - Ask for the ice-cream factory on the brooklyn side<br>
-Sleep no more - A moving play set in a warehouse - highly recommend<br>
-Gallow Green<br>
-Rockefeller - Yes its touristy, but if you <i>had</i> to climb a building and feel $35 lighter, i would pick this one<br>
-230 5th Ave - Expensive,touristy but also probably the best rooftop bar in the city<br>
+Central Park | Run the bridal path<br>
+Walk the Highline | Most beautiful in the spring or fall<br>
+Museum of Modern Art | Don't miss the hanging helicopter<br>
+The MET| Although this is a donation based museum, the ladies at the ticket counter don't tell you that!<br>
+Williamsburg, Brooklyn| Lot of cool little places in and around Bedford Ave<br>
+Walk the Brooklyn Bridge| Ask for the ice-cream factory on the Brooklyn side<br>
+Sleep no more| A moving play set in a warehouse, highly recommend it<br>
+Gallow Green| A spooky rooftop bar with frequent visits by the casts of Gallow Green<br>
+Rockefeller| Yes it’s touristy, but if you <i>had</i> to climb a building and feel $35 lighter, i would pick this one<br>
+230 5th Ave| Expensive, touristy but also probably the best rooftop bar in the city<br>
 
 <h2>Eat</h2>
-Hangawi - Korean <br>
-Liquiteria - Oatmeal <br>
-Shake Shack burger<br>
-Beyond Sushi - Best vegetarian sushi, ever.<br>
-Pio pio - Peruvian Chicken<br>
-Five Leaves - Australian (in Williamsburg, Brooklyn)<br>
-Angelicas Kitchen - Vegetarian<br>
-Candle Cafe - Vegetarian<br>
-Halal guys @ 53rd and 6th<br>
-Momofuku Noodle bar<br>
-Bubby’s - American Southern food<br>
-Spice Market<br>
+Hangawi| Korean vegan food with unbelievable ambience <br>
+Liquiteria| It's a juice shop but they have the best Oatmeal <br>
+Shake Shack burger| Totally unhealthy but you have got to try the shroom burger <br>
+Beyond Sushi| Best vegetarian sushi, ever.<br>
+Pio pio|Peruvian Chicken, get the matador special<br>
+Five Leaves|Australian cusines, done right (in Williamsburg, Brooklyn)<br>
+Angelicas Kitchen| Vegetarian<br>
+Candle Cafe| Tasty vegetarian but nowhere close to healthy<br>
+Halal guys @ 53rd and 6th | Get their Chicken over rice with a ton of White Sauce aka Crack Sauce<br>
+Bubby’s|American Southern food and they have the best pies in town<br>
+Spice Market| Cool ambience with good food but slightly pricy<br>
 
 
 <h2>Drink</h2>
-Amor y Amargo - A Bitters Tasting Room<br>
-Alice’s tea cup<br>
-Chaan tea house<br>
-Blue Bottle Coffee - Rockefeller building<br>
-Toby's Estate Coffee - Williamsburg, Brooklyn<br>
-Kaffe 1668 - Tribeca<br>
-Le Colombe<br>
-Mud Truck on Astor Place(Not always around - It's a truck, what do you expect)<br>
+Amor y Amargo|A Bitters Tasting Room<br>
+Chaan tea house| A place to wind down with a book or meet friends for tea<br>
+Blue Bottle Coffee|Rockefeller building<br>
+Toby's Estate Coffee|Williamsburg, Brooklyn<br>
+Kaffe 1668|Tribeca | They take their coffee very seriously here<br>
+Le Colombe | Mochas are really good<br>
+Mud Truck on Astor Place (Not always around|It's a truck, what do you expect)<br>
 
 <h2>End on a sweet note</h2>
-Lady M<br>
-Levain - Best cookie in the world (Dark Chocolate peanut butter)<br>
-Magnolia Cupcakes<br>
-Max Brenner's Chocolate<br>
-Mast Brothers Chocolate, Williamsburg, Brooklyn<br>
-Momofuku milk bar<br>
+Lady M| The mille crepe is something like you have never tasted before.Can't go wrong with chocolate or vanilla<br>
+Levain| Best cookie in the world (Dark Chocolate peanut butter)<br>
+Magnolia Cupcakes| Quite touristy now, but if i had to pick one, i would go with the classic vanilla<br>
+Max Brenner's Chocolate | Everything chocolate. The food is meh. Try the chocolate pizza<br>
+Mast Brothers Chocolate | Williamsburg, Brooklyn| If not anything, go in to taste their different samples<br>
+Momofuku milk bar | The compost cookie<br>
 
 
-I've done my fare bit of travelling and i hate to say it, but New York is the world's most amazing city and the places listed above are just a few reasons for it. There, i said it and i won't take it back.
+I've done my fare bit of travelling and I hate to admit it, but New York is the world's most amazing city and the places listed above are just a few reasons for it. There, I said it and I won't take it back.
 
-One of the places that i have a deep connection with is not on this list because I went back and deleted it. I’m only human. Not to worry, I will give them all the business they need. 
+One of the places that I have a deep connection with is not on this list because I went back and deleted it. I’m only human. Don't worry; I will give them all the business they need. 
 
 
 ---
-
