--- a/_posts/2014-03-13-ny.markdown
+++ b/_posts/2014-03-13-ny.markdown
@@ -39,19 +39,19 @@ Spice Market| Cool ambience with good food but slightly pricy<br>
 <h2>Drink</h2>
 Amor y Amargo|A Bitters Tasting Room<br>
 Chaan tea house| A place to wind down with a book or meet friends for tea<br>
-Blue Bottle Coffee|Rockefeller building<br>
-Toby's Estate Coffee|Williamsburg, Brooklyn<br>
+Blue Bottle Coffee| Rockefeller building<br>
+Toby's Estate Coffee| Williamsburg, Brooklyn<br>
 Kaffe 1668|Tribeca | They take their coffee very seriously here<br>
-Le Colombe | Mochas are really good<br>
-Mud Truck on Astor Place (Not always around|It's a truck, what do you expect)<br>
+Le Colombe| Mochas are really good<br>
+Mud Truck on Astor Place| Coffee (Not always around -It's a truck, what do you expect)<br>
 
 <h2>End on a sweet note</h2>
 Lady M| The mille crepe is something like you have never tasted before.Can't go wrong with chocolate or vanilla<br>
 Levain| Best cookie in the world (Dark Chocolate peanut butter)<br>
 Magnolia Cupcakes| Quite touristy now, but if i had to pick one, i would go with the classic vanilla<br>
-Max Brenner's Chocolate | Everything chocolate. The food is meh. Try the chocolate pizza<br>
-Mast Brothers Chocolate | Williamsburg, Brooklyn| If not anything, go in to taste their different samples<br>
-Momofuku milk bar | The compost cookie<br>
+Max Brenner's Chocolate| Everything chocolate. The food is meh. Try the chocolate pizza<br>
+Mast Brothers Chocolate| Williamsburg, Brooklyn| If not anything, go in to taste their different samples<br>
+Momofuku milk bar| The compost cookie<br>
 
 
 I've done my fare bit of travelling and I hate to admit it, but New York is the world's most amazing city and the places listed above are just a few reasons for it. There, I said it and I won't take it back.
