final ny post commit

--- a/_posts/2014-03-13-ny.markdown
+++ b/_posts/2014-03-13-ny.markdown
@@ -56,7 +56,7 @@ Momofuku milk bar| The compost cookie<br>
 
 I've done my fare bit of travelling and I hate to admit it, but New York is the world's most amazing city and the places listed above are just a few reasons for it. There, I said it and I won't take it back.
 
-One of the places that I have a deep connection with is not on this list because I went back and deleted it. I’m only human. Don't worry; I will give them all the business they need. 
+One of the places that i have a lot of history with, is not on this list because I went back and deleted it. I’m only human. Don't worry; I will give them all the business they need. 
 
 
 ---
