final ny post commit

--- a/_posts/2014-03-13-ny.markdown
+++ b/_posts/2014-03-13-ny.markdown
@@ -31,9 +31,9 @@ Pio pio| Peruvian Chicken, get the matador special<br>
 Five Leaves| Australian cusines, done right (in Williamsburg, Brooklyn)<br>
 Angelicas Kitchen| Vegetarian<br>
 Candle Cafe| Tasty vegetarian but nowhere close to healthy<br>
-Halal guys @ 53rd and 6th| Get their Chicken over rice with a ton of White Sauce aka Crack Sauce<br>
+Halal guys @ 53rd and 6th| Get their Chicken over rice with a ton of White Sauce AKA Crack Sauce<br>
 Bubby’s| American Southern food and they have the best pies in town<br>
-Spice Market| Cool ambience with good food but slightly pricy<br>
+Spice Market| Cool ambience with good food but slightly pricey<br>
 
 
 <h2>Drink</h2>
