new additions to new york

--- a/_posts/2014-03-13-ny.markdown
+++ b/_posts/2014-03-13-ny.markdown
@@ -34,11 +34,13 @@ Candle Cafe| Tasty vegetarian but nowhere close to healthy<br>
 Halal guys @ 53rd and 6th| Get their Chicken over rice with a ton of White Sauce AKA Crack Sauce<br>
 Bubby’s| American Southern food and they have the best pies in town<br>
 Spice Market| Cool ambience with good food but slightly pricey<br>
+La Esquina| Mouth watering tacos. Enough said <br>
 
 
 <h2>Drink</h2>
 Amor y Amargo| A Bitters Tasting Room<br>
 230 5th Ave| Expensive, touristy but also probably the best rooftop bar in the city<br>
+The Raines Law Room | Probably the best prohibition setting bar in NYC with solid cocktails<br>
 Chaan tea house| A place to wind down with a book or meet friends for tea<br>
 Blue Bottle Coffee| Rockefeller building<br>
 Toby's Estate Coffee| Williamsburg, Brooklyn<br>
@@ -53,6 +55,7 @@ Magnolia Cupcakes| Quite touristy now, but if i had to pick one, i would go with
 Max Brenner's Chocolate| Everything chocolate. The food is meh. Try the chocolate pizza<br>
 Mast Brothers Chocolate| Williamsburg, Brooklyn| If not anything, go in to taste their different samples<br>
 Momofuku milk bar| The compost cookie<br>
+Van Leeuwen| Natural ice-creams. Try the Ginger or Gianduja<br> 
 
 
 I've done my fare bit of travelling and I hate to admit it, but New York is the world's most amazing city and the places listed above are just a few reasons for it. There, I said it and I won't take it back.
