Change some titles

--- a/_posts/2014-02-01-marathon.markdown
+++ b/_posts/2014-02-01-marathon.markdown
@@ -1,13 +1,12 @@
 ---
 layout: post
-title: Jumping off a cliff
+title: Running off a cliff
 category: posts
 ---
 I was on vacation visiting my brother's in Texas. After a heavy meal and 
 slowly drifting into an incredible food coma, I picked up a book lying next to bed on a shelf called <a href = "http://www.amazon.com/Four-Months-Four-hour-Marathon-Updated/dp/0399532595">4 hour marathon</a>.
 I was curious because I felt that the entire idea of running a marathon seemed mental, let alone a 4 hour one.
-It was a tiny book and I finished it in one sitting. I put the book back on the shelf and forgot all about it, but little
-did I know that the <a href ="http://www.youtube.com/watch?v=imamcajBEJs">seed</a> was planted.
+It was a tiny book and I finished it in one sitting. I put the book back on the shelf and forgot all about it, but little did I know that the <a href ="http://www.youtube.com/watch?v=imamcajBEJs">seed</a> was planted.
 
 I hated running. I didn't think of running a marathon as humanly possible, unless you had a certain type of body and especially not, if you weighed above 200 pounds. 
 Before then, the farthest i had ever run in my life was 3 miles and I could count the number of times
