--- a/_posts/2014-03-21-block.markdown
+++ b/_posts/2014-03-21-block.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Online Ads: The Elephant In The Room 
+title: Online Ads, The Elephant In The Room 
 category: posts
 ---
 Google made $50B in advertisement(Ad) revenue in 2013. Worth saying that again, FIFTY Billion. (Sure, when you compare that to the unbelievable doozy that FB made paying $19B for whatsapp, it doesn't sounds like a lot.) 
